Add repository links on footer

--- a/best-practices.html
+++ b/best-practices.html
@@ -150,5 +150,9 @@
             <a href="https://www.uxpin.com/studio/blog/web-form-design-best-practices-5-useful-ui-patterns-2/" target="_blank">https://www.uxpin.com/studio/blog/web-form-design-best-practices-5-useful-ui-patterns-2/</a>
         </dd>
     </dl>
+    <footer>
+        <p>Made by <a href="https://github.com/imaginamundo">Diogo Fernandes</a></p>
+        <p>Make a pull request on <a href="https://github.com/imaginamundo/boilerform">Boilerform</a></p>
+    </footer>
 </body>
 </html>
