--- a/index.html
+++ b/index.html
@@ -112,5 +112,9 @@
         <button class="button button-pill button-dark">Dark</button>
         <button class="button button-pill button-link">Link</button>
     </p>
+    <footer>
+        <p>Made by <a href="https://github.com/imaginamundo">Diogo Fernandes</a></p>
+        <p>Make a pull request on <a href="https://github.com/imaginamundo/boilerform">Boilerform</a></p>
+    </footer>
 </body>
 </html>
