--- a/use-cases.html
+++ b/use-cases.html
@@ -223,5 +223,9 @@
     &lt;button class="button button-secondary"&gt;Cancel&lt;/button&gt;
     &lt;button class="button button-primary"&gt;Register&lt;/button&gt;
 &lt;/p&gt;</pre>
+    <footer>
+        <p>Made by <a href="https://github.com/imaginamundo">Diogo Fernandes</a></p>
+        <p>Make a pull request on <a href="https://github.com/imaginamundo/boilerform">Boilerform</a></p>
+    </footer>
 </body>
 </html>
