Change name from bordered to outline

--- a/index.html
+++ b/index.html
@@ -87,17 +87,17 @@
         <button class="button button-link">Link</button>
     </p>
 
-    <h3>Border button</h3>
+    <h3>Outline button</h3>
     <p>
-        <button class="button button-primary-bordered">Primary</button>
-        <button class="button button-secondary-bordered">Secondary</button>
-        <button class="button button-success-bordered">Success</button>
-        <button class="button button-danger-bordered">Danger</button>
-        <button class="button button-warning-bordered">Warning</button>
-        <button class="button button-info-bordered">Info</button>
-        <button class="button button-light-bordered">Light</button>
-        <button class="button button-dark-bordered">Dark</button>
-        <button class="button button-link-bordered">Link</button>
+        <button class="button button-primary-outline">Primary</button>
+        <button class="button button-secondary-outline">Secondary</button>
+        <button class="button button-success-outline">Success</button>
+        <button class="button button-danger-outline">Danger</button>
+        <button class="button button-warning-outline">Warning</button>
+        <button class="button button-info-outline">Info</button>
+        <button class="button button-light-outline">Light</button>
+        <button class="button button-dark-outline">Dark</button>
+        <button class="button button-link-outline">Link</button>
     </p>
 
     <h3>Button pill</h3>
