Input with passwords with type password better responsive best practices

--- a/use-cases.html
+++ b/use-cases.html
@@ -34,7 +34,7 @@
         <p>
             <label>
                 <span class="input-label">Password</span>
-                <input type="text" placeholder="Insert your password" class="input-default input-block input-error" />
+                <input type="password" placeholder="Insert your password" class="input-default input-block input-error" />
                 <span class="input-help">Wrong password, try again</span>
             </label>
         </p>
@@ -60,7 +60,7 @@
 &lt;p&gt;
     &lt;label&gt;
         &lt;span class="input-label"&gt;Password&lt;/span&gt;
-        &lt;input type="text" placeholder="Insert your username" class="input-default input-block input-error" /&gt;
+        &lt;input type="password" placeholder="Insert your password" class="input-default input-block input-error" /&gt;
         &lt;span class="input-help"&gt;Wrong password, try again&lt;/span&gt;
     &lt;/label&gt;
 &lt;/p&gt;
@@ -128,7 +128,7 @@
         <p>
             <label>
                 <span class="input-label">Password</span>
-                <input type="text" placeholder="Insert your password" class="input-default input-block" />
+                <input type="password" placeholder="Insert your password" class="input-default input-block" />
             </label>
         </p>
         <p>
@@ -203,7 +203,7 @@
 &lt;p&gt;
     &lt;label&gt;
         &lt;span class="input-label"&gt;Password&lt;/span&gt;
-        &lt;input type="text" placeholder="Insert your password" class="input-default input-block" /&gt;
+        &lt;input type="password" placeholder="Insert your password" class="input-default input-block" /&gt;
     &lt;/label&gt;
 &lt;/p&gt;
 &lt;p&gt;
