--- a/use-cases.html
+++ b/use-cases.html
@@ -28,13 +28,13 @@
         <p>
             <label>
                 <span class="input-label">Username</span>
-                <input type="text" placeholder="Insert your username" class="input-default input-block" />
+                <input type="text" placeholder="Insert username" class="input-default input-block" />
             </label>
         </p>
         <p>
             <label>
                 <span class="input-label">Password</span>
-                <input type="password" placeholder="Insert your password" class="input-default input-block input-error" />
+                <input type="password" placeholder="Insert password" class="input-default input-block input-error" />
                 <span class="input-help">Wrong password, try again</span>
             </label>
         </p>
@@ -54,13 +54,13 @@
 &lt;p&gt;
     &lt;label&gt;
         &lt;span class="input-label"&gt;Username&lt;/span&gt;
-        &lt;input type="text" placeholder="Insert your username" class="input-default input-block" /&gt;
+        &lt;input type="text" placeholder="Insert username" class="input-default input-block" /&gt;
     &lt;/label&gt;
 &lt;/p&gt;
 &lt;p&gt;
     &lt;label&gt;
         &lt;span class="input-label"&gt;Password&lt;/span&gt;
-        &lt;input type="password" placeholder="Insert your password" class="input-default input-block input-error" /&gt;
+        &lt;input type="password" placeholder="Insert password" class="input-default input-block input-error" /&gt;
         &lt;span class="input-help"&gt;Wrong password, try again&lt;/span&gt;
     &lt;/label&gt;
 &lt;/p&gt;
@@ -80,13 +80,13 @@
         <p>
             <label>
                 <span class="input-label">Username</span>
-                <input type="text" placeholder="Insert your username" class="input-default input-block" />
+                <input type="text" placeholder="Insert username" class="input-default input-block" />
             </label>
         </p>
         <p>
             <label>
                 <span class="input-label">E-mail</span>
-                <input type="email" placeholder="Insert your e-mail" class="input-default input-block" />
+                <input type="email" placeholder="Insert e-mail" class="input-default input-block" />
             </label>
         </p>
         <p>Select gender</p>
@@ -119,7 +119,7 @@
             <label>
                 <span class="input-label">Select country</span>
                 <select class="input-default input-block">
-                    <option disabled selected>Select your country</option>
+                    <option disabled selected>Select country</option>
                     <option>Brazil</option>
                     <option>Trinidad Tobago</option>
                 </select>
@@ -128,7 +128,7 @@
         <p>
             <label>
                 <span class="input-label">Password</span>
-                <input type="password" placeholder="Insert your password" class="input-default input-block" />
+                <input type="password" placeholder="Insert password" class="input-default input-block" />
             </label>
         </p>
         <p>
@@ -155,13 +155,13 @@
 &lt;p&gt;
     &lt;label&gt;
         &lt;span class="input-label"&gt;Username&lt;/span&gt;
-        &lt;input type="text" placeholder="Insert your username" class="input-default input-block" /&gt;
+        &lt;input type="text" placeholder="Insert username" class="input-default input-block" /&gt;
     &lt;/label&gt;
 &lt;/p&gt;
 &lt;p&gt;
     &lt;label&gt;
         &lt;span class="input-label"&gt;E-mail&lt;/span&gt;
-        &lt;input type="email" placeholder="Insert your e-mail" class="input-default input-block" /&gt;
+        &lt;input type="email" placeholder="Insert e-mail" class="input-default input-block" /&gt;
     &lt;/label&gt;
 &lt;/p&gt;
 &lt;p&gt;Select gender&lt;/p&gt;
@@ -194,7 +194,7 @@
     &lt;label&gt;
         &lt;span class="input-label"&gt;Select country&lt;/span&gt;
         &lt;select class="input-default input-block"&gt;
-            &lt;option disabled selected&gt;Select your country&lt;/option&gt;
+            &lt;option disabled selected&gt;Select country&lt;/option&gt;
             &lt;option&gt;Brazil&lt;/option&gt;
             &lt;option&gt;Trinidad Tobago&lt;/option&gt;
         &lt;/select&gt;
@@ -203,13 +203,13 @@
 &lt;p&gt;
     &lt;label&gt;
         &lt;span class="input-label"&gt;Password&lt;/span&gt;
-        &lt;input type="password" placeholder="Insert your password" class="input-default input-block" /&gt;
+        &lt;input type="password" placeholder="Insert password" class="input-default input-block" /&gt;
     &lt;/label&gt;
 &lt;/p&gt;
 &lt;p&gt;
     &lt;label&gt;
         &lt;span class="input-label"&gt;Suggestion&lt;/span&gt;
-        &lt;textarea class="input-default input-block" rows="10" placeholder="Insert you suggestion (Optional)"&gt;&lt;/textarea&gt;
+        &lt;textarea class="input-default input-block" rows="10" placeholder="Insert suggestion (Optional)"&gt;&lt;/textarea&gt;
     &lt;/label&gt;
 &lt;/p&gt;
 &lt;p&gt;
