--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
     <p>
         <input type="range" class="input-default" />
     </p>
+
+    <h3>File</h3>
+    <p>
+        <input type="file" class="input-default" />
+    </p>
+
     <h3>Button</h3>
     <p>
         <button class="button button-primary">Primary</button>
@@ -97,7 +103,6 @@
         <button class="button button-info-outline">Info</button>
         <button class="button button-light-outline">Light</button>
         <button class="button button-dark-outline">Dark</button>
-        <button class="button button-link-outline">Link</button>
     </p>
 
     <h3>Button pill</h3>
@@ -110,7 +115,11 @@
         <button class="button button-pill button-info">Info</button>
         <button class="button button-pill button-light">Light</button>
         <button class="button button-pill button-dark">Dark</button>
-        <button class="button button-pill button-link">Link</button>
+    </p>
+
+    <h3>Input with invisible button</h3>
+    <p>
+        <input type="text" class="input-default button-invisible" /><button class="button">Invisible button</button>
     </p>
     <footer>
         <p>Made by <a href="https://github.com/imaginamundo">Diogo Fernandes</a></p>
