--- a/index.html
+++ b/index.html
@@ -121,6 +121,13 @@
     <p>
         <input type="text" class="input-default button-invisible" /><button class="button">Invisible button</button>
     </p>
+    <h3>Input with invisible label</h3>
+    <p>
+        <label class="input-label-invisible-2">
+            <input type="text" class="input-default" placeholder="0,00" />
+            <b class="input-label">R$</b>
+        </label>
+    </p>
     <footer>
         <p>Made by <a href="https://github.com/imaginamundo">Diogo Fernandes</a></p>
         <p>Make a pull request on <a href="https://github.com/imaginamundo/boilerform">Boilerform</a></p>
