Separate buttons in paragraphs to not look weird on mobile, and fix invisible label class

--- a/index.html
+++ b/index.html
@@ -82,38 +82,83 @@
 
     <h3>Button</h3>
     <p>
-        <button class="button button-primary">Primary</button>
-        <button class="button button-secondary">Secondary</button>
-        <button class="button button-success">Success</button>
-        <button class="button button-danger">Danger</button>
-        <button class="button button-warning">Warning</button>
-        <button class="button button-info">Info</button>
-        <button class="button button-light">Light</button>
-        <button class="button button-dark">Dark</button>
-        <button class="button button-link">Link</button>
+        <p>
+            <button class="button button-primary">Primary</button>
+        </p>
+        <p>
+            <button class="button button-secondary">Secondary</button>
+        </p>
+        <p>
+            <button class="button button-success">Success</button>
+        </p>
+        <p>
+            <button class="button button-danger">Danger</button>
+        </p>
+        <p>
+            <button class="button button-warning">Warning</button>
+        </p>
+        <p>
+            <button class="button button-info">Info</button>
+        </p>
+        <p>
+            <button class="button button-light">Light</button>
+        </p>
+        <p>
+            <button class="button button-dark">Dark</button>
+        </p>
+        <p>
+            <button class="button button-link">Link</button>
+        </p>
     </p>
 
     <h3>Outline button</h3>
     <p>
-        <button class="button button-primary-outline">Primary</button>
-        <button class="button button-secondary-outline">Secondary</button>
-        <button class="button button-success-outline">Success</button>
-        <button class="button button-danger-outline">Danger</button>
-        <button class="button button-warning-outline">Warning</button>
-        <button class="button button-info-outline">Info</button>
-        <button class="button button-light-outline">Light</button>
-        <button class="button button-dark-outline">Dark</button>
+        <p>
+            <button class="button button-primary-outline">Primary</button>
+        </p>
+        <p>
+            <button class="button button-secondary-outline">Secondary</button>
+        </p>
+        <p>
+            <button class="button button-success-outline">Success</button>
+        </p>
+        <p>
+            <button class="button button-danger-outline">Danger</button>
+        </p>
+        <p>
+            <button class="button button-warning-outline">Warning</button>
+        </p>
+        <p>
+            <button class="button button-info-outline">Info</button>
+        </p>
+        <p>
+            <button class="button button-light-outline">Light</button>
+        </p>
+        <p>
+            <button class="button button-dark-outline">Dark</button>
+        </p>
     </p>
 
     <h3>Button pill</h3>
     <p>
         <button class="button button-pill button-primary">Primary</button>
+    </p>
+    <p>
         <button class="button button-pill button-secondary">Secondary</button>
+    <p>
         <button class="button button-pill button-success">Success</button>
+    </p>
+    <p>
         <button class="button button-pill button-danger">Danger</button>
+    <p>
         <button class="button button-pill button-warning">Warning</button>
+    </p>
+    <p>
         <button class="button button-pill button-info">Info</button>
+    <p>
         <button class="button button-pill button-light">Light</button>
+    </p>
+    <p>
         <button class="button button-pill button-dark">Dark</button>
     </p>
 
@@ -123,7 +168,7 @@
     </p>
     <h3>Input with invisible label</h3>
     <p>
-        <label class="input-label-invisible-2">
+        <label class="input-label-invisible">
             <input type="text" class="input-default" placeholder="0,00" />
             <b class="input-label">R$</b>
         </label>
