Create a wrapper to invisible button with flexbox

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     </p>
 
     <h3>Input with invisible button</h3>
-    <p>
+    <p class="button-invisible-wrap">
         <input type="text" class="input-default button-invisible" /><button class="button">Invisible button</button>
     </p>
     <h3>Input with invisible label</h3>
