--- a/best-practices.html
+++ b/best-practices.html
@@ -129,7 +129,7 @@
     </div>
     <h3>References</h3>
     <dl>
-        <dt>Forma Library v1.0</dt>
+        <dt>Forma Library v1.0 by <a href="https://twitter.com/amrkamalrashed">Amr Kamal</a></dt>
         <dd><a href="https://dribbble.com/shots/4085830-Forma-Library-v1-0" target="_blank">https://dribbble.com/shots/4085830-Forma-Library-v1-0</a></dd>
         <dt>Design Better Forms by <a href="https://twitter.com/CoyleAndrew" target="_blank">Andrew Coyle</a></dt>
         <dd>
